# orbit

./: .dockerignore  .gitignore  .gitmodules  Dockerfile.postgres  README.md  SECURITY.md  api_spec.json  docker-compose.yml
backend/: OPTIMIZATION_NOTES.md  db.py  index.py  log_conf.yaml
backend/Notes/: SERVER_NOTES.md
backend/app/: app_def.py  build_parser.py  cache.py  correlation.py  utility.py
backend/app_def/: app_def.py  build_parser.py
backend/db/: __init__.py  db.py  mongodb.py  sqlite.py
backend/docs/: generic.py  projects.py
backend/models/: __init__.py  projects.py  runner.py  runners.py  schema.py  test_cases.py  test_cycles.py  test_executions.py
backend/module/: __init__.py  runners.py
backend/notes/: API_OPTIMIZATION_NOTES.md  SERVER_NOTES.md
backend/routes/: OPTIMIZATION_NOTES.md  __init__.py  cycles.py  executions.py  projects.py  root.py  runners.py  test_cases.py  test_cycles.py  test_executions.py
backend/test/: conftest.py  main.py  test_base.py  test_cases.py  test_cycles.py  test_executions.py  test_main.py  (+1 more)
certs/: generate-ssl-certs.bat  generate-ssl-certs.sh
docker/: Dockerfile_apache  Dockerfile_backend  Dockerfile_frontend  Dockerfile_mongodb  Dockerfile_runner  README.md  apache-entrypoint.sh  docker-compose-create-runners.yml  docker-compose-runners.yml  docker-compose.yml  docker_setup.sh  generate-ssl-certs.bat  generate-ssl-certs.sh  nginx.conf  requirements.txt  runner_setup.py  setup.sh  start-runner.sh  supervisord.conf  webdav.conf
dockerfiles/: Dockerfile.app  Dockerfile_backend  Dockerfile_mongodb  README.md  build.sh  docker-compose.yml
env/: activate_environment.bash  configure_environment.bash  poetry_setup.bat  pyproject.toml
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json
frontend-old/: README.md  angular.json  package-lock.json  package.json
frontend-v2/: README.md  angular.json  package-lock.json  package.json
poetry-env/: activate_environment.bash  configure_environment.bash  poetry_setup.bat  pyproject.toml
tests/: backend_tests.py  conftest.py
(+236 files in other folders)
