[tool.poetry]
name = "poetry-env"
version = "1.0.0"
description = "Poetry environment"
authors = ["JERRY"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.7"
docker = "^7.1.0"
fastapi = "^0.123.10"
keyring = "^25.7.0"
motor = "^3.7.1"
natsort = "^8.4.0"
poetry = "^2.1.1"
pymongo = "^4.15.5"
pytest = "^9.0.1"
pytest-order = "^1.3.0"
python-dotenv = '^1.2.1'
pyyaml = "^6.0.3"
schedule = "^1.2.2"
uvicorn =  "^0.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
