[tool.poetry]
name = "poetry-env"
version = "1.0.0"
description = "Poetry environment"
authors = ["JERRY"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.7"
cachetools = "^7.0.5"
fastapi = "^0.135.1"
keyring = "^25.7.0"
motor = "^3.7.1"
natsort = "^8.4.0"
poetry = "^2.3.2"
pyinstrument = "^5.1.2"
pymongo = "^4.16.0"
pytest = "^9.0.2"
pytest-order = "^1.3.0"
python-dotenv = '^1.2.2'
pyyaml = "^6.0.3"
schedule = "^1.2.2"
uvicorn =  "^0.41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
