[tool.poetry]
name = "poetry-env"
version = "1.0.0"
description = "Poetry environment"
authors = ["JERRY"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.7"
beautifulsoup4 = "^4.13.4"
docker = "^7.1.0"
fastapi = "^0.123.10"
Flask = "^3.1.2"
ifcfg = "^0.24"
jc = "^1.25.5"
jinja2 = "^3.1.6"
keyring = "^25.6.0"
lxml = "^5.3.1"
matplotlib = "^3.10.7"
netmiko = "^4.6.0"
numpy = "^2.3.5"
pandas = "^2.3.1"
paramiko = "^3.5.1"
poetry = "^2.1.1"
psutil = "^7.1.3"
pygithub = "^2.6.1"
pylint = "^3.3.8"
pytest = "^9.0.1"
pytest-order = "^1.3.0"
pyyaml = "^6.0.3"
schedule  = "^1.2.2"
scipy = "^1.16.3"
selenium = "^4.38.0"
semver = "^3.0.4"
setuptools = "^80.9.0"
tqdm = "^4.67.1"
tzlocal = "^5.3.1"
uvicorn =  "^0.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
